Fin commentaire exo3

--- a/CC.ipynb
+++ b/CC.ipynb
@@ -380,17 +380,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Question 1 :\n",
-      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "Question 1 :\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------\n",
+      "{'PC1': {'CPU': 'Intel', 'GPU': '12', 'RAM': '16', 'Stockage': '512', 'OS': 'Win'}, 'PC2': {'CPU': 'amd', 'GPU': '', 'RAM': '32', 'Stockage': '256', 'OS': 'linuw'}, 'PC3': {'CPU': 'intel', 'GPU': '12', 'RAM': '36', 'Stockage': '700', 'OS': 'win'}}\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 2 :\n",
       "CPU\n",
       "GPU\n",
@@ -399,53 +407,60 @@
       "OS\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 3 :\n",
-      "intel 4060 32 600 win\n",
-      "intel 4090 128 50 win\n",
-      "amd 3060 426 400 win\n",
+      "Intel 12 16 512 Win\n",
+      "amd  32 256 linuw\n",
+      "intel 12 36 700 win\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 4 :\n",
       "['CPU', 'GPU', 'RAM', 'Stockage', 'OS']\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 5 :\n",
-      "dict_values(['intel', '4060', '32', '600', 'win'])\n",
-      "dict_values(['intel', '4090', '128', '50', 'win'])\n",
-      "dict_values(['amd', '3060', '426', '400', 'win'])\n",
+      "dict_values(['Intel', '12', '16', '512', 'Win'])\n",
+      "dict_values(['amd', '', '32', '256', 'linuw'])\n",
+      "dict_values(['intel', '12', '36', '700', 'win'])\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 6 :\n",
-      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "{'PC1': {'CPU': 'Intel', 'GPU': '12', 'RAM': '16', 'Stockage': '512', 'OS': 'Win'}, 'PC2': {'CPU': 'amd', 'GPU': '', 'RAM': '800', 'Stockage': '256', 'OS': 'linuw'}, 'PC3': {'CPU': 'intel', 'GPU': '12', 'RAM': '36', 'Stockage': '700', 'OS': 'win'}}\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 7 :\n",
-      "PC3 {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}\n",
-      "PC2 {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}\n",
-      "PC1 {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}\n",
+      "PC2 {'CPU': 'amd', 'GPU': '', 'RAM': '800', 'Stockage': '256', 'OS': 'linuw'}\n",
+      "PC1 {'CPU': 'Intel', 'GPU': '12', 'RAM': '16', 'Stockage': '512', 'OS': 'Win'}\n",
+      "PC3 {'CPU': 'intel', 'GPU': '12', 'RAM': '36', 'Stockage': '700', 'OS': 'win'}\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 8 :\n",
-      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': '3060', 'GPU': 'amd', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "{'PC1': {'CPU': 'Intel', 'GPU': '12', 'RAM': '16', 'Stockage': '512', 'OS': 'Win'}, 'PC2': {'CPU': 'amd', 'GPU': '', 'RAM': '800', 'Stockage': '256', 'OS': 'linuw'}, 'PC3': {'CPU': 'intel', 'GPU': '36', 'RAM': '12', 'Stockage': '700', 'OS': 'win'}}\n",
       "\n",
       "\n",
       "Question 9 :\n",
-      "CP_MyPC {'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': '3060', 'GPU': 'amd', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "CP_MyPC {'PC1': {'CPU': 'Intel', 'GPU': '12', 'RAM': '16', 'Stockage': '512', 'OS': 'Win'}, 'PC2': {'CPU': 'amd', 'GPU': '', 'RAM': '800', 'Stockage': '256', 'OS': 'linuw'}, 'PC3': {'CPU': 'intel', 'GPU': '36', 'RAM': '12', 'Stockage': '700', 'OS': 'win'}}\n",
       "sauvegarde réussie\n",
       "\n",
       "\n",
       "Question 10 :\n",
-      "PC1 {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}\n",
-      "PC le plus performant :  PC1\n"
+      "PC2 {'CPU': 'amd', 'GPU': '', 'RAM': '800', 'Stockage': '256', 'OS': 'linuw'}\n",
+      "PC le plus performant :  PC2\n"
      ]
     }
    ],
    "source": [
-    "# 1. Proposer une création et une initialisation interactive de My_PC et pour chaque dictionnaire de pc l'ajouté dans le  dico principal My_PC.\n",
+    "### 1 ### \n",
+    "# Proposer une création et une initialisation interactive de My_PC et pour chaque dictionnaire de pc l'ajouté dans le  dico principal My_PC.\n",
     "print(\"Question 1 :\")\n",
     "My_PC = {}\n",
     "N = int(input(\"Entrez le nombre de PC à ajouter: \"))\n",
-    "for i in range(1, N+1):\n",
+    "for i in range(1, N+1):#On parcourt le nombre de PC à ajouter\n",
     "    pc = {}\n",
     "    pc[\"CPU\"] = input(\"Entrez le CPU: \")\n",
     "    pc[\"GPU\"] = input(\"Entrez le GPU: \")\n",
@@ -453,70 +468,68 @@
     "    pc[\"Stockage\"] = input(\"Entrez la quantité de stockage: \")\n",
     "    pc[\"OS\"] = input(\"Entrez le système d'exploitation: \")\n",
     "    My_PC[\"PC\"+str(i)] = pc\n",
+    "print(\"-------------------\")\n",
     "print(My_PC)\n",
     "print(\"\\n\")\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 2. Afficher par une fonction paramétrable les clés du PC1 de My_PC.\n",
+    "### 2 ###\n",
+    "#  Afficher par une fonction paramétrable les clés du PC1 de My_PC.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 2 :\")\n",
-    "\n",
-    "first_key = next(iter(My_PC))  # Obtenir la première clé\n",
-    "\n",
+    "first_key = next(iter(My_PC))  # Obtenir la première clé du dictionnaire\n",
     "def afficher_cles_pc1(My_PC):\n",
     "    for key in My_PC[first_key]:\n",
     "        print(key)\n",
-    "\n",
     "afficher_cles_pc1(My_PC)\n",
     "print(\"\\n\")\n",
     "\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "# 3. Afficher par une fonction paramétrable les valeurs de My_PC pour chaque pc.\n",
+    "### 3 ###\n",
+    "#  Afficher par une fonction paramétrable les valeurs de My_PC pour chaque pc.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 3 :\")\n",
     "def afficher_valeurs(My_PC):\n",
-    "    for key, value in My_PC.items():\n",
-    "        print(\" \".join(value.values()))\n",
-    "\n",
+    "    for key, value in My_PC.items(): #On parcourt le dictionnaire\n",
+    "        print(\" \".join(value.values())) #On affiche les valeurs\n",
     "afficher_valeurs(My_PC)\n",
     "print(\"\\n\")\n",
     "\n",
-    "\n",
-    "\n",
-    "# 4. Proposer une fonction permettant l’extraction des clés dans une liste.\n",
+    "### 4 ###\n",
+    "#  Proposer une fonction permettant l’extraction des clés dans une liste.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 4 :\")\n",
     "def extraction_cles(My_PC):\n",
     "    cles = []\n",
-    "    for key in My_PC[first_key]:\n",
+    "    for key in My_PC[first_key]: #On parcourt le PC pour afficher les clés\n",
     "        cles.append(key)\n",
     "    print(cles)\n",
-    "\n",
     "extraction_cles(My_PC)\n",
     "print(\"\\n\")\n",
-    "# 5. Proposer une fonction permettant l’extraction des valeurs dans une liste.\n",
+    "\n",
+    "### 5 ###\n",
+    "#  Proposer une fonction permettant l’extraction des valeurs dans une liste.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 5 :\")\n",
     "def extraction_valeurs(My_PC):\n",
-    "    for key, value in My_PC.items():\n",
-    "        print(value.values())\n",
-    "\n",
-    "    \n",
-    "\n",
+    "    for key, value in My_PC.items(): #On parcourt le dictionnaire\n",
+    "        print(value.values()) #On affiche les valeurs\n",
     "extraction_valeurs(My_PC)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 6. Proposer une fonction permettant la correction de quantité de RAM.\n",
+    "### 6 ###\n",
+    "#  Proposer une fonction permettant la correction de quantité de RAM.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 6 :\")\n",
     "def correction_ram(My_PC):\n",
-    "    pc = input(\"Entrez le PC à modifier: \")\n",
+    "    pc = input(\"Entrez le PC sur lequel vous souhaitez corriger la RAM: \")\n",
     "    My_PC[pc][\"RAM\"] = input(\"Entrez la nouvelle quantité de RAM: \")\n",
     "    print(My_PC)\n",
     "\n",
     "correction_ram(My_PC)\n",
     "print(\"\\n\")\n",
-    "# 7. Proposer une fonction permettant le tri de My_PC selon la quantité de sockage.\n",
+    "\n",
+    "### 7 ###\n",
+    "#  Proposer une fonction permettant le tri de My_PC selon la quantité de sockage.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 7 :\")\n",
     "def tri_stockage(My_PC):\n",
     "    # Tri par 'Stockage' en prenant soin de traiter le stockage comme un entier\n",
@@ -525,32 +538,40 @@
     "\n",
     "tri_stockage(My_PC)\n",
     "print(\"\\n\")\n",
-    "# 8. Proposer une fonction permettant d’inverser deux paramètres du dictionnaire.\n",
+    "\n",
+    "### 8 ###\n",
+    "#Proposer une fonction permettant d’inverser deux paramètres du dictionnaire.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 8 :\")\n",
     "def inverser_parametres(My_PC):\n",
     "    pc = input(\"Entrez le PC à modifier ( mettre : PC suvi de son numéro) : \")\n",
     "    param1 = input(\"Entrez le premier paramètre à échanger: \")\n",
     "    param2 = input(\"Entrez le deuxième paramètre à échanger: \")\n",
-    "    My_PC[pc][param1], My_PC[pc][param2] = My_PC[pc][param2], My_PC[pc][param1]\n",
+    "    My_PC[pc][param1], My_PC[pc][param2] = My_PC[pc][param2], My_PC[pc][param1] #On échange les paramètres\n",
     "    print(My_PC)\n",
     "\n",
     "inverser_parametres(My_PC)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 9. Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\n",
+    "### 9 ### \n",
+    "#Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 9 :\")\n",
     "def sauvegarde(nom, My_PC):\n",
-    "    CP_MyPC = My_PC.copy()\n",
+    "    CP_MyPC = My_PC.copy() #On copie le dictionnaire My_PC\n",
     "    print(nom, CP_MyPC)\n",
     "\n",
     "sauvegarde(\"CP_MyPC\", My_PC)\n",
-    "print(\"sauvegarde réussie\")\n",
+    "print(\"Sauvegarde réussie\")\n",
     "print(\"\\n\")\n",
-    "# 10. Proposer une fonction affichant le PC le plus performant de My_PC.\n",
+    "\n",
+    "### 10 ###\n",
+    "#Proposer une fonction affichant le PC le plus performant de My_PC.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 10 :\")\n",
     "def pc_plus_performant(My_PC):\n",
-    "    pc = max(My_PC, key=lambda x: int(My_PC[x][\"RAM\"]))\n",
-    "    print(pc, My_PC[pc])\n",
+    "    pc = max(My_PC, key=lambda x: int(My_PC[x][\"RAM\"]))#On prend le PC avec la RAM la plus élevée en prenant soin de traiter la RAM comme un entier\n",
+    "    print(pc, My_PC[pc]) #On affiche le PC le plus performant\n",
     "    print(\"PC le plus performant : \", pc)\n",
     "\n",
     "pc_plus_performant(My_PC)\n"
